# DietOptimizerApp

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/dietoptimizerapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/: animal_types_database.json  diet_types.json  ingredients_database.json
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  native-lib.cpp
app/src/main/cpp/include/: ApiRequest.h  Diet.h  DietApi.h  IOptimizer.h  Ingredient.h  RationCalculator.h
app/src/main/cpp/src/: ApiRequest.cpp  Diet.cpp  DietApi.cpp  Ingredient.cpp  RationCalculator.cpp  SimplexSolver.cpp  SimplexSolver.h
app/src/main/java/com/example/dietoptimizerapp/: MainActivity.java
app/src/main/java/com/example/dietoptimizerapp/adapters/: IngredientSelectionAdapter.java  ResultsAdapter.java
app/src/main/java/com/example/dietoptimizerapp/jni/: JniBridge.java
app/src/main/java/com/example/dietoptimizerapp/models/: AnimalType.java  DietComponent.java  DietResult.java  Ingredient.java
app/src/main/java/com/example/dietoptimizerapp/utils/: CostCalculator.java  DatabaseManager.java  JsonBuilder.java
app/src/main/res/drawable/: button_add_background.xml  button_info_background.xml  button_primary_background.xml  button_secondary_background.xml  cost_box_blue.xml  cost_box_green.xml  cost_box_purple.xml  edittext_background.xml  ic_download.xml  ic_info.xml  item_ingredient_background.xml  item_ingredient_selected_background.xml  spinner_background.xml  summary_background.xml
app/src/main/res/drawable-night/: cost_box_blue.xml  item_ingredient_background.xml
app/src/main/res/layout/: activity_main.xml  item_composition_component.xml  item_diet_result.xml  item_ingredient_selection.xml  item_selected_ingredient.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/com/example/dietoptimizerapp/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
